tests/fixtures/invalid/pow_none_int_str.py
# Cannot call pow() with None, Int, Str
x = pow(None, 1, "hello")
